--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 	"dependencies": {
 		"@neondatabase/serverless": "^1.0.2",
 		"@uploadthing/svelte": "^7.3.3",
+		"better-auth": "^1.3.34",
 		"dayjs": "^1.11.19",
 		"lucide": "^0.552.0",
 		"mode-watcher": "^1.1.0",
